--- a/MottoMap-JavaBackend/pom.xml
+++ b/MottoMap-JavaBackend/pom.xml
@@ -54,11 +54,6 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
@@ -73,6 +68,11 @@
        		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        		<version>2.8.6</version>
     	</dependency>
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
