--- a/MottoMap-JavaBackend/src/main/resources/application.properties
+++ b/MottoMap-JavaBackend/src/main/resources/application.properties
@@ -1,9 +1,5 @@
 spring.application.name=mottomap
 
-spring.datasource.url=jdbc:h2:mem:mottomap
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
 server.error.include-stacktrace=never
 
 spring.jpa.show-sql=true
@@ -14,3 +10,8 @@ springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.operationsSorter=alpha
 springdoc.version=1.0.0
 springdoc.swagger-ui.display-request-duration=true
+
+spring.datasource.url=jdbc:sqlserver://${DB_HOST}:1433;database=${DB_NAME};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
