Adicionado o controle para que o Database seeder rode apenas em modo de desenvolvimento

--- a/MottoMap-JavaBackend/src/main/resources/application.properties
+++ b/MottoMap-JavaBackend/src/main/resources/application.properties
@@ -11,6 +11,8 @@ springdoc.swagger-ui.operationsSorter=alpha
 springdoc.version=1.0.0
 springdoc.swagger-ui.display-request-duration=true
 
+spring.profiles.active=${ACTIVE_PROFILE:dev}
+
 spring.datasource.url=jdbc:sqlserver://${DB_HOST}:1433;database=${DB_NAME};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
